summative.moria.Moria.scala.error
Compilation error:
Moria:15: error: not found: value estDosmur
  if (!estDosmur())
       ^